LU-1234 dcache: don't drop invalid dentry arbitrarily

This is a backport of part of LU-506 dcache scalability support:
* remove super hack d_rehash_cond(), and treats DCACHE_LUSTRE_INVALID
  similar to DCACHE_DISCONNECTED, therefore dentry doesn't need to
  be dropped and rehashed frequently.
* .lookup(LOOKUP_CREATE) calls d_add() dentry directly, and .create
  only needs to d_instantiate() this dentry.
* other cleanups.

Signed-off-by: Lai Siyao <laisiyao@whamcloud.com>
Change-Id: Ie169bc7e763e6891084999041aac9f62c8dee9f0
Reviewed-on: http://review.whamcloud.com/2400
Tested-by: Hudson
Reviewed-by: Fan Yong <fan.yong@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Peng Tao <bergwolf@gmail.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>