lustre/include/linux/lustre_compat25.h
@@ -163,9 +163,6 @@ do {cfs_mutex_lock_nested(&(inode)->i_mutex, I_MUTEX_PARENT); } while(0)
 #define gfp_t int
 #endif
 
-#define lock_dentry(___dentry)          cfs_spin_lock(&(___dentry)->d_lock)
-#define unlock_dentry(___dentry)        cfs_spin_unlock(&(___dentry)->d_lock)
-
 #define ll_kernel_locked()      kernel_locked()
 
 /*
@@ -256,11 +253,6 @@ static inline int cfs_cleanup_group_info(void)
 
 #include <linux/proc_fs.h>
 
-#if !defined(HAVE_D_REHASH_COND) && defined(HAVE___D_REHASH)
-#define d_rehash_cond(dentry, lock) __d_rehash(dentry, lock)
-extern void __d_rehash(struct dentry *dentry, int lock);
-#endif
-
 #ifdef HAVE_CAN_SLEEP_ARG
 #define ll_flock_lock_file_wait(file, lock, can_sleep) \
         flock_lock_file_wait(file, lock, can_sleep)
@@ -312,12 +304,6 @@ static inline int mapping_has_pages(struct address_space *mapping)
 #define ll_vfs_symlink(dir, dentry, mnt, path, mode) \
                        vfs_symlink(dir, dentry, path)
 #endif
-
-#define ll_set_dflags(dentry, flags) do { \
-                cfs_spin_lock(&dentry->d_lock); \
-                dentry->d_flags |= flags; \
-                cfs_spin_unlock(&dentry->d_lock); \
-        } while(0)
 #endif
 
 #ifndef container_of
@@ -837,7 +823,6 @@ static inline int ll_quota_off(struct super_block *sb, int off, int remount)
 #define queue_max_phys_segments(rq)       queue_max_segments(rq)
 #define queue_max_hw_segments(rq)         queue_max_segments(rq)
 #endif
-
 
 #ifndef HAVE_BI_HW_SEGMENTS
 #define bio_hw_segments(q, bio) 0
